--- a/css_basic/styles.css
+++ b/css_basic/styles.css
@@ -1,6 +1,9 @@
 body{
+    margin:10px;
+    padding: 20px;
     display: flex;
     flex-direction: column;
+    background-color: lavender;
 }
 header,main,footer{
  flex-direction: column;
@@ -20,4 +23,14 @@ article{
     flex-direction: row;
     flex:2;
     overflow-y: auto;
+}
+
+ul li{
+    background-color: lightblue;
+    padding: 5px;
+    margin: 5px;
+}
+.logo{
+    width: 100px;
+    height: 100px;
 }
